# naro-rust

./: README.md
database-init/: .env.exmple  .gitignore  Cargo.toml  Taskfile.yaml
database-init/src/: main.rs
database-server/: Cargo.toml  compose.yaml
database-server/src/: main.rs
exercize-server/: Cargo.toml  test.sh
exercize-server/src/: main.rs
hello-server/: Cargo.toml
hello-server/src/: main.rs
json-server/: Cargo.toml
json-server/src/: main.rs
routing-server/: Cargo.toml
routing-server/src/: main.rs
